--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,11 @@
         }
     ],
     "minimum-stability": "dev",
+    "autoload": {
+        "psr-4": {
+            "CloudSoh\\InventoryManagement\\": "src/"
+        }
+    },
     "extra": {
         "laravel": {
             "providers": [
@@ -19,6 +24,6 @@
         }
     },
     "require": {
-        "illuminate/support": "^5.7"
+        "illuminate/support": "^5.6"
     }
 }
